--- a/Index.html
+++ b/Index.html
@@ -126,7 +126,7 @@
                 <h2>TRAINING AND COLLABORATION</h2>
                  <div class="projects-grid">
             <div class="project-card">
-                <img src="4625beed-f5f6-4b66-adb8-06bff62b9355.jpeg" alt="Jannie T. Ugay and classmates in a computer lab.">
+                <img src="82f5a2ac-abed-4630-a066-1e8ad414f94a.jpeg alt="Jannie T. Ugay and classmates in a computer lab.">
                 <h3>Hands-On IT Training</h3>
                 <p>Showcasing practical training and collaborative work in a computer lab environment.</p>
             </div>
